Reverted changes, skipped task 7 and did task 8

--- a/exercise4/exercise4.ipynb
+++ b/exercise4/exercise4.ipynb
@@ -362,6 +362,61 @@
     "\n",
     "The formula doesn't require the exact value of $m$, as the ratio $\\frac{n}{𝑚}$ is all that matters."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data has the schema:\n",
+    "\n",
+    "$Grades(university, courseID, studentID, grade)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a) For each university, the average number of students in a course\n",
+    "\n",
+    "Key attribute = `university`\n",
+    "\n",
+    "The number of students in a course depends on the courses within each university, therefore we need to sample __universities__ to ensure that all courses and students within a university are included in the sample\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b) Fraction of students, who have an average grade of 2.0 or better\n",
+    "\n",
+    "Key attributes = `university, studentID`\n",
+    "\n",
+    "We need to sample the students across all universities to approximate their average grade. By sampling on __studentID__ and __university__, we get a uniform sample of the students where each student is uniquely identified within the sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) Fraction of courses where at least half of the students got the grade 1.7 or better\n",
+    "Key attributes = `university, courseID`\n",
+    "\n",
+    "The sampling must preserve the student to course mapping. By sampling on `courseID`, we ensure all students in a course are included in the sample"
+   ]
   }
  ],
  "metadata": {
