Finished Task 7 and revised Task 8

--- a/exercise4/exercise4.ipynb
+++ b/exercise4/exercise4.ipynb
@@ -374,6 +374,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For a Bloom filter, the false positive probability $b$ is given by:\n",
+    "\n",
+    "$b = (1 - e^{-\\frac{k*m}{n}})^k$\n",
+    "\n",
+    "We now want to find $k$ such that it minimizes $b$, which means we minimize $b$ with respect to $k$.\n",
+    "\n",
+    "\n",
+    "To do that, we first, take the natural logarithm\n",
+    "\n",
+    "$\\ln(b) = k * \\ln(1 - e^{-\\frac{k*m}{n}})$\n",
+    "\n",
+    "Now we differentiate $\\ln(b)$ with respect to $k$\n",
+    "\n",
+    "<br />\n",
+    "\n",
+    "$\\frac{d}{dk}\\ln(b) = \\ln(1 - e^{-\\frac{k*m}{n}}) + k * \\frac{1}{1 - e^{-\\frac{k*m}{n}}} * (-\\frac{m}{n} * e^{-\\frac{k*m}{n}})$\n",
+    "\n",
+    "<br />\n",
+    "\n",
+    "By setting this derivative to 0 and solving numerically/anatically, the optimal $k$ becomes:\n",
+    "\n",
+    "$k = \\frac{n}{m} * ln(2)$\n",
+    "\n",
+    "This $k$ minimizes collisions while maximizing the effective use of bits."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercise 8"
    ]
   },
@@ -392,9 +422,9 @@
    "source": [
     "### a) For each university, the average number of students in a course\n",
     "\n",
-    "Key attribute = `university`\n",
+    "Key attributes = `university`, `courseID`\n",
     "\n",
-    "The number of students in a course depends on the courses within each university, therefore we need to sample __universities__ to ensure that all courses and students within a university are included in the sample\n"
+    "The number of students in a course depends on the courses within each university, therefore we need to sample __universities__ and __courseID__ to ensure that all courses and students within a university are included in the sample.\n"
    ]
   },
   {
@@ -403,9 +433,9 @@
    "source": [
     "### b) Fraction of students, who have an average grade of 2.0 or better\n",
     "\n",
-    "Key attributes = `university, studentID`\n",
+    "Key attributes = `university`, `studentID`\n",
     "\n",
-    "We need to sample the students across all universities to approximate their average grade. By sampling on __studentID__ and __university__, we get a uniform sample of the students where each student is uniquely identified within the sample"
+    "We need to sample the students across all universities to approximate their average grade. By sampling on __studentID__ and __university__, we get a uniform sample of the students where each student is uniquely identified within the sample."
    ]
   },
   {
@@ -413,9 +443,9 @@
    "metadata": {},
    "source": [
     "### c) Fraction of courses where at least half of the students got the grade 1.7 or better\n",
-    "Key attributes = `university, courseID`\n",
+    "Key attributes = `university`, `courseID`\n",
     "\n",
-    "The sampling must preserve the student to course mapping. By sampling on `courseID`, we ensure all students in a course are included in the sample"
+    "The sampling must preserve the student to course mapping. By sampling on `courseID`, we ensure all students in a course are included in the sample."
    ]
   }
  ],
