--- a/exercise5/exercise5.ipynb
+++ b/exercise5/exercise5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mining Massive Datasets Problem Set 4\n",
+    "# Mining Massive Datasets Problem Set 5\n",
     "\n",
     "Ruben Hartenstein, Taha Erkoc"
    ]
@@ -20,38 +20,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a)\n",
-    "- The probability that a single machine does not fail during the time period $T$ is $1 - p$.\n",
-    "- For $n$ machines, assuming failures are independent, the probabilty that none of the $n$ machines fail is: $(1 - p)^n$.\n",
-    "- The probability of at least one machine failing is the complement of this event: <br> $P(at\\ least\\ one\\ failure) = 1 - P(no\\ failures) = 1 - (1 - p)^n$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### b)\n",
-    "The probability $p_k$ of exactly $k$ machines failing can be modeled using the binoial distribution, since each machine independently either fails or does not fail.<br><br>\n",
-    "$p_k = \\binom{n}{k} p^k (1 - p)^{n-k}$ <br><br>\n",
-    "Where:<br>\n",
-    "- $\\binom{n}{k} = \\frac{n!}{k!(n-k)!}$: is the binomial coefficient, representing the number of ways to choose $k$ failing machines out of $n$.\n",
-    "- $p^k$: Probability of $k$ machines failing.\n",
-    "- $(1 - p)^{n - k}$: Probability of the remaining $n - k$ machines not failing."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### c)\n",
-    "The binomial distribution guarantees that the sum of probabilities for all possible outcomes (from $0$ to $n$ failures) equals $1$.<br> <br>\n",
-    "$p_0 + p_1 + \\ldots + p_n = 1$ <br><br>\n",
-    "Here: <br>\n",
-    "- $p_0 = (1 - p)^n$ : probabilities of no failures.\n",
-    "- $p_1 + p_2 + \\ldots + p_n$: probability of at least one failure.\n",
+    "When two different keys hash to the same index in a hash table, we have a hash collision. There are several common mechanisms that are used to resolve hash collisions:\n",
     "\n",
-    "Therefore:<br><br>\n",
-    "$p_1 + p_2 + \\ldots + p_n = 1 - p_0 = 1 - (1 - p)^n$"
+    "1. Chaining:\n",
+    "Each index inside the hash table stores a linked list of all keys that hash to that index. If a collision occurs, the key-value pair is added to the linked list at that index.\n",
+    "\n",
+    "2. Open Adressing:\n",
+    "If a collision occurs, an algorithm probes the hash table for the next available slot (e.g. using linear where it checks the next slot sequentially or quadratic probing where quadratic offsets are used to find the next slot). Unlike in chaining, there is no additional memory needed for linked lists, even though the overall performance can suffer when the table becomes densely populated.\n",
+    "\n",
+    "3. Open Hashing (Separate Hash Tables):\n",
+    "Each index inside the hash table stores its own hash table to resolve collisions. This can reduce clustering issues but leads to increased memory usage.\n",
+    "\n",
+    "\n",
+    "C++, Java and Python all have their own ways to resolve hash collisions.\n",
+    "\n",
+    "- C++ (Standard Template Library `std::unordered_map`): Chaining, it uses a bucket array where each bucket contains a linked list or dynamic array of the key-value pairs. Whenever a hash collision occurs, the new key-value pair is added to the bucket corresponding to the hash value. If the load factor (number of elements / number of buckets) surpasses a certain threshold (usually 1), the hash table doubles the size of the bucket arrays and rehashes all its elements.\n",
+    "\n",
+    "- Java (`HashMap`): Chaining with Dynamic Resizing, also uses a bucket array where each bucket initially contains a linked list of the key-value pairs. When the number of entries in the bucket surpasses a certain threshold, the linked list in a bucket is converted to a binary search tree for better performance.\n",
+    "Again, after a certain load factor is exceeded, the hash table resizes and all entries are rehashed.\n",
+    "\n",
+    "- Python(`dict`): Open adressing with quadratic probing, when a collision occurs, it probes subsequent slots using a quadratic sequence until an empty slot is found or the key is located. Python dictionaries dynamically resize when the table reaches 2/3 of its capacity to maintain performance and ensure that space remains available for probes. During the resizing, all keys are rehashed into the new table.\n",
+    "\n"
    ]
   },
   {
