--- a/exercise5/exercise5.ipynb
+++ b/exercise5/exercise5.ipynb
@@ -54,32 +54,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SHA-256 (Secure Hash Algorithm 256-bit)\n",
-    "- Converts input data into a fixed-length 256-bit hash.\n",
-    "- Commonly used in cryptographic applications like digital signatures and password storage.\n",
-    "### MD5 (Message Digest Algorithm 5)\n",
-    "- Produces a 128-bit hash value.\n",
-    "- Historically used for password hashing but is now considered insecure against brute-force and collision attacks.\n",
+    "### a)\n",
+    "MurmurHash is a fast, non-crypthographic hash function that primarily uses multiplication and rotation (thus the name Murmur) to achieve a uniform distribution of the hash values. It works by mixing the input data with mathematical operations such as multiplications and XORs to reduce clustering and ensure good randomness of the hash values.\n",
     "\n",
-    "### Connection of Hash Functions to Password Security\n",
-    "Hash functions are vital for securely storing passwords because:\n",
-    "1. They transform as password into a fixed-size hash, making the original password irrecoverable.\n",
-    "2. Good hash functions are designed to be:\n",
-    "    - __Deterministic__: Same input always produces the same output:\n",
-    "    - __Non-reversible__: It's computationally infeasible to derive the original input from the hash.\n",
-    "    - __Collision-resistant__: Different inputs should produce unique hashes.\n",
+    "The seed value adds randomization to the hash functions and thus allows the same input string generating different hash outputs when different seeds are used. Using this property it is possible to create independent hash functions which is essential for algorithms like our Bloom filters.\n",
     "\n",
-    "However, if basic hash functions (like unsalted MD5 or SHA-1) are used without additional security measures, they bacome vulnerable to rainbow table attacks.\n",
     "\n",
-    "### Rainbow Table\n",
-    "A rainbow table is a precomputed table of hashes for a large set of possible passwords. It is used to reverse-engineer hashed passwords by looking up their hash values:\n",
-    "- Trade-off: Reduces computational cost of cracking hashes by using storage space.\n",
-    "- Threat: Enables attackers to match hash values quickly to their plaintext equivalents, especially for commonly used passwords.\n",
-    "\n",
-    "### Salt\n",
-    "Salt is a random string of data added to a password before hashing it. Its purpose is to:\n",
-    "1. Ensure that even if two users have the same password, their hashes will be unique.\n",
-    "2. Defeat precomputed rainbow tables, as the salt must also be known to match the hash."
+    "### b)\n",
+    "MurmurHash was never designed to be cryptographically secure thus it just lacks the necessary mathematical complexity to prevent collision attacks. As mentioned above, its main applications are hash tables and Bloom filters, which prioritize speed and a uniform distribition over collision resistance."
    ]
   },
   {
@@ -90,44 +72,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Hash Function                        Hashed Values  \\\n",
+      "0  h1(x) = (2x + 1) mod 32      [7, 3, 9, 3, 11, 19, 5, 13, 11]   \n",
+      "1  h2(x) = (3x + 7) mod 32  [16, 10, 19, 10, 22, 2, 13, 25, 22]   \n",
+      "2      h3(x) = (4x) mod 32     [12, 4, 16, 4, 20, 4, 8, 24, 20]   \n",
+      "\n",
+      "                              Binary Representations  \\\n",
+      "0  [00111, 00011, 01001, 00011, 01011, 10011, 001...   \n",
+      "1  [10000, 01010, 10011, 01010, 10110, 00010, 011...   \n",
+      "2  [01100, 00100, 10000, 00100, 10100, 00100, 010...   \n",
+      "\n",
+      "                  Tail Lengths  Max Tail Length  Estimate (Distinct Elements)  \n",
+      "0  [0, 0, 0, 0, 0, 0, 0, 0, 0]                0                             1  \n",
+      "1  [4, 1, 0, 1, 1, 1, 0, 0, 1]                4                            16  \n",
+      "2  [2, 2, 4, 2, 2, 2, 3, 3, 2]                4                            16  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# Stream of integers\n",
+    "stream = [3, 1, 4, 1, 5, 9, 2, 6, 5]\n",
+    "\n",
+    "# Hash functions\n",
+    "def h1(x):\n",
+    "    return (2 * x + 1) % 32\n",
+    "\n",
+    "def h2(x):\n",
+    "    return (3 * x + 7) % 32\n",
+    "\n",
+    "def h3(x):\n",
+    "    return (4 * x) % 32\n",
+    "\n",
+    "# Function to count trailing zeros in binary\n",
+    "def count_trailing_zeros(num):\n",
+    "    binary = f\"{num:05b}\"  # Convert to 5-bit binary\n",
+    "    return len(binary) - len(binary.rstrip('0'))  # Count trailing zeros\n",
+    "\n",
+    "# Process each hash function\n",
+    "results = []\n",
+    "hash_functions = [\n",
+    "    (h1, \"h1(x) = (2x + 1) mod 32\"),\n",
+    "    (h2, \"h2(x) = (3x + 7) mod 32\"),\n",
+    "    (h3, \"h3(x) = (4x) mod 32\"),\n",
+    "]\n",
+    "\n",
+    "# Iterate through hash functions\n",
+    "for h_func, description in hash_functions:\n",
+    "    hashed_values = [h_func(x) for x in stream]\n",
+    "    tail_lengths = [count_trailing_zeros(h_func(x)) for x in stream]\n",
+    "    max_tail_length = max(tail_lengths)\n",
+    "    estimate = 2 ** max_tail_length\n",
+    "    results.append({\n",
+    "        \"Hash Function\": description,\n",
+    "        \"Hashed Values\": hashed_values,\n",
+    "        \"Binary Representations\": [f\"{x:05b}\" for x in hashed_values],\n",
+    "        \"Tail Lengths\": tail_lengths,\n",
+    "        \"Max Tail Length\": max_tail_length,\n",
+    "        \"Estimate (Distinct Elements)\": estimate,\n",
+    "    })\n",
+    "\n",
+    "# Display results\n",
+    "df_results = pd.DataFrame(results)\n",
+    "print(df_results)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Internal Data Structure\n",
-    "1.  Buckets\n",
-    "    -   The HashMap uses an array (`Node<K,V>[] table`) to store key-value pairs. Each element in the array represents a bucket.\n",
-    "2.  Node Class\n",
-    "    -   Each bucket contains a `Node` object that stores:\n",
-    "        -   `key`: The key of the mapping.\n",
-    "        -   `value`: The associated value.\n",
-    "        -   `hash`: The hash code of the key.\n",
-    "        -   `next`: A reference to the next node in the bucket (for collision handling via chaining).\n",
-    "3.  Tree Nodes\n",
-    "    -   If the number of entries in a bucket exceeds the `TREEIFY_THRESHOLD` (8 by default) the bucket switches to a tree structure (red-black tree). This improves the efficiency of operations from $O(n)$ to $O(log(n))$.\n",
-    "### Adding a `<Key, Value>` Pair\n",
-    "1. Hash Computation\n",
-    "    -   A key's hash code is computed using `hash(key)` which applies a transformation to reduce collisions.\n",
-    "2. Bucket Index\n",
-    "    - The bucket index is calculated using `index = (hash & (table.length - 1))`.\n",
-    "3.  Collision Handling:\n",
-    "    -   If the bucket at the computed index is empty, a new node is placed directly.\n",
-    "    -   If the bucket already has entries:\n",
-    "        - The chain of nodes is traversed using `Node.next` to find an existing key or reach the end.\n",
-    "        -   If the key exists (determined using `equals()`), its value is updated.\n",
-    "        -   Otherwise, a new node is appended at the end of the chain.\n",
-    "    -   If the chain lenght exceeds `TREEIFY_THRESHOLD`, the chain is converted into a red-black tree.\n",
-    "4. Rehashing\n",
-    "    -   If the number of entries exceeds the threshold (capacity * load factor), the table is resized (doubled), and the entries are rehashed to redistribute them across the new buckets.\n",
-    "### Retrieving an Entry\n",
-    "1. Hash Computation and Index Lookup:\n",
-    "    -   The key's hash is computed, and the bucket index is determined.\n",
-    "2. Bucket Traversal:\n",
-    "    -   The bucket at the computed index is traversed:\n",
-    "        - If the bucket is a linked list, the nodes are scanned sequentially, comparing the key using `equals()`\n",
-    "        - If the bucket is a tree, a tree search is performed based on the key's hash and order (if keys are comparable).\n",
-    "3. Return Value:\n",
-    "    - If a matching key is found, its value is returned.\n",
-    "    - If no match is found `null` is returned.\n"
+    "### Bonus\n",
+    "\n",
+    "The choice of hash functions might lead to poor distributions of hash values. For example $h_3(x) = (4x)\\mod 32$ will always produce values that are multiples of 4, which significantly reduces randomness and results in fewer unique hash values. This can lead to clustering and many collisions.\n",
+    "\n",
+    "An advice would be to avoid simple linear functions like $ax+b\\mod 2^k$ unless $a$ and $b$ are carefully chosen to avoid patterns. One could also consider using more advanced hash functions like MurmurHash because these tend to have way better randomness."
    ]
   },
   {
@@ -141,17 +167,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. MurmurHash3:\n",
-    "    -   Description: A non-cryptographic hash function that provides high-quality, uniformly distributed hash values.\n",
-    "    - Justification: MurmurHash3 is widely used for its speed and high-quality hash distribution. It provides good mixing properties and is robust against clustering, making it ideal for Bloom filters.\n",
-    "2. FNV-1a (Fowler-Noll-Vo):\n",
-    "    -   Description: A lightweight hash function that sues a prime multiplier for dispersion and processes input byte-by-byte.\n",
-    "    - Justification: FNV-1a is simple, fast and produces distinct hash values due to its unique multiplier. Its design complements MurmurHash3 in terms of computation and output.\n",
-    "3. CityHash:\n",
-    "    -   Description: A hash function designed by Google for fast processing of strings, optimized for low-latency applications.\n",
-    "    - Justification: CityHash offers a good tradeoff between speed and uniformity of hash values. Its implementation uses techniques like hashing chunks of data efficiently, which differ significantly from MurmurHash3 and FNV-1a.\n",
+    "Given our stream of numbers:\n",
     "\n",
-    "Each hash function employs distinct approaches for combining and distributing input data (bit-mixing, prime-based linear methods and block hashing). Their differing internal designs minimize the likelihood of correlated outputs for similar inputs and therefore reducing false positives. "
+    "$\\{3, 4, 1, 3, 4, 2, 1, 2\\}$\n",
+    "\n",
+    "First we define our variables $X_i.el$\n",
+    "\n",
+    "$X_i.el = [3, 4, 1, 3, 4, 2, 1, 2]$ for $i > 0$ \n",
+    "\n",
+    "The Alon-Matias-Szegedy algorithm computes the $k$-th moment by using the frequency of each unique element in the stream. The variable $X_i.val$ is updated at each position to capture how the stream contributes to the computation of the moment.\n",
+    "\n",
+    "So we:\n",
+    "1. Track the frequency of each element $x$ in the stream so far\n",
+    "2. Calculate $X_i.val = f(x)^k$ for the element $x$ at position $i$\n",
+    "\n",
+    "For this exercise we take $k = 2$, which is the sum of squared frequencies of the elements.\n",
+    "\n",
+    "| Position $i$ | $X_i.el$ | Frequency of $X_i.el$ | $X_i.val = f(X_i.el)^2$|\n",
+    "|--------------|----------|-----------------------|------------------------|\n",
+    "| 1            | 3        | $f(3) = 1$            | $1^2 = 1$              |\n",
+    "| 2            | 4        | $f(4) = 1$            | $1^2 = 1$              |\n",
+    "| 3            | 1        | $f(1) = 1$            | $1^2 = 1$              |\n",
+    "| 4            | 3        | $f(3) = 2$            | $2^2 = 4$              |\n",
+    "| 5            | 4        | $f(4) = 2$            | $2^2 = 4$              |\n",
+    "| 6            | 2        | $f(2) = 1$            | $1^2 = 1$              |\n",
+    "| 7            | 1        | $f(1) = 2$            | $2^2 = 4$              |\n",
+    "| 8            | 2        | $f(2) = 2$            | $2^2 = 4$              |\n",
+    "\n",
+    "### Does it make sense to have a separate variable for each stream position?\n",
+    "\n",
+    "In practice, the stream is potentially infinite and allocating memory for each position is impossible. Furthermore, many variables would store redundant information, as the streams often depend on statistics (e.g. frequency count in this example).\n",
+    "\n",
+    "Instead of storing $X_i.el$ and $X_i.val$ for each position, it would make much more sense to use a frequency dictionary, which tracks the frequency of each unique element in the stream and then use this dictionary to dynamically calculate $X_i.val$ when needed."
    ]
   },
   {
