--- a/exercise6/exercise6.ipynb
+++ b/exercise6/exercise6.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mining Massive Datasets Problem Set 5\n",
+    "# Mining Massive Datasets Problem Set 6\n",
     "\n",
     "Ruben Hartenstein, Taha Erkoc"
    ]
@@ -20,27 +20,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When two different keys hash to the same index in a hash table, we have a hash collision. There are several common mechanisms that are used to resolve hash collisions:\n",
+    "The Jaccard similarity for two sets $C_1, C_2$ is defined as:\n",
     "\n",
-    "1. Chaining:\n",
-    "Each index inside the hash table stores a linked list of all keys that hash to that index. If a collision occurs, the key-value pair is added to the linked list at that index.\n",
+    "$sim(C_1, C_2) = \\frac{|C_1 \\cup C_2|}{|C_1 \\cap C_2|}$\n",
     "\n",
-    "2. Open Adressing:\n",
-    "If a collision occurs, an algorithm probes the hash table for the next available slot (e.g. using linear where it checks the next slot sequentially or quadratic probing where quadratic offsets are used to find the next slot). Unlike in chaining, there is no additional memory needed for linked lists, even though the overall performance can suffer when the table becomes densely populated.\n",
+    "For multi-sets, where an element can be a member more than once, the definition of the intersection and union needs to account for the multiplicities of the elements.\n",
     "\n",
-    "3. Open Hashing (Separate Hash Tables):\n",
-    "Each index inside the hash table stores its own hash table to resolve collisions. This can reduce clustering issues but leads to increased memory usage.\n",
+    "The intersection of two multi-sets $C_1, C_2$ is defined as:\n",
+    "\n",
+    "$(C_1 \\cap C_2)(x) = min(C_1(x), C_2(x))$\n",
+    "\n",
+    "where $C_1(x), C_2(x)$ represent the counts of elements x in these two sets respectively.\n",
+    "\n",
+    "Therefore the union of two multi-sets can also be defined:\n",
+    "\n",
+    "$(C_1 \\cup C_2)(x) = max(C_1(x), C_2(x))$\n",
     "\n",
     "\n",
-    "C++, Java and Python all have their own ways to resolve hash collisions.\n",
+    "Using these two definitions, we can define the Jaccard similarity for multi-sets as:\n",
     "\n",
-    "- C++ (Standard Template Library `std::unordered_map`): Chaining, it uses a bucket array where each bucket contains a linked list or dynamic array of the key-value pairs. Whenever a hash collision occurs, the new key-value pair is added to the bucket corresponding to the hash value. If the load factor (number of elements / number of buckets) surpasses a certain threshold (usually 1), the hash table doubles the size of the bucket arrays and rehashes all its elements.\n",
+    "$sim(C_1, C_2) = \\frac{\\sum_{x \\in C_1 \\cup C_2} min(C_1(x), C_2(x))}{\\sum_{x \\in C_1 \\cup C_2} max(C_1(x), C_2(x))}$\n",
     "\n",
-    "- Java (`HashMap`): Chaining with Dynamic Resizing, also uses a bucket array where each bucket initially contains a linked list of the key-value pairs. When the number of entries in the bucket surpasses a certain threshold, the linked list in a bucket is converted to a binary search tree for better performance.\n",
-    "Again, after a certain load factor is exceeded, the hash table resizes and all entries are rehashed.\n",
+    "With this definition, in the case of two sets where each element appears at most one, the formula reduced back to its original form:\n",
     "\n",
-    "- Python(`dict`): Open adressing with quadratic probing, when a collision occurs, it probes subsequent slots using a quadratic sequence until an empty slot is found or the key is located. Python dictionaries dynamically resize when the table reaches 2/3 of its capacity to maintain performance and ensure that space remains available for probes. During the resizing, all keys are rehashed into the new table.\n",
-    "\n"
+    "$sim(C_1, C_2) = \\frac{|C_1 \\cup C_2|}{|C_1 \\cap C_2|}$"
    ]
   },
   {
