--- a/exercise6/exercise6.ipynb
+++ b/exercise6/exercise6.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 2"
+    "# Exercise 3"
    ]
   },
   {
@@ -58,20 +58,94 @@
    "metadata": {},
    "source": [
     "### a)\n",
-    "MurmurHash is a fast, non-crypthographic hash function that primarily uses multiplication and rotation (thus the name Murmur) to achieve a uniform distribution of the hash values. It works by mixing the input data with mathematical operations such as multiplications and XORs to reduce clustering and ensure good randomness of the hash values.\n",
+    "Hash functions\n",
     "\n",
-    "The seed value adds randomization to the hash functions and thus allows the same input string generating different hash outputs when different seeds are used. Using this property it is possible to create independent hash functions which is essential for algorithms like our Bloom filters.\n",
+    "$h_1(x) = (2x + 1) \\mod{6} $ <br>\n",
+    "$h_2(x) = (3x + 2) \\mod{6} $ <br>\n",
+    "$h_3(x) = (5x + 2) \\mod{6} $ <br>\n",
+    "\n",
+    "Now we compute the hash values for $x \\in \\{0,1,2,3,4,5\\}$\n",
+    "\n",
+    "For $h_1(x) = (2x + 1) \\mod{6} $:\n",
+    "\n",
+    "$h_1(0) = 1$ <br>\n",
+    "$h_1(1) = 3$ <br>\n",
+    "$h_1(2) = 5$ <br>\n",
+    "$h_1(3) = 1$ <br>\n",
+    "$h_1(4) = 3$ <br>\n",
+    "$h_1(5) = 5$ <br>\n",
+    "\n",
+    "For $h_2(x) = (3x + 2) \\mod{6} $:\n",
+    "\n",
+    "$h_2(0) = 2$ <br>\n",
+    "$h_2(1) = 5$ <br>\n",
+    "$h_2(2) = 2$ <br>\n",
+    "$h_2(3) = 5$ <br>\n",
+    "$h_2(4) = 2$ <br>\n",
+    "$h_2(5) = 5$ <br>\n",
+    "\n",
+    "For $h_3(x) = (5x + 2) \\mod{6}$:\n",
+    "\n",
+    "$h_3(0) = 2$ <br>\n",
+    "$h_3(1) = 1$ <br>\n",
+    "$h_3(2) = 0$ <br>\n",
+    "$h_3(3) = 5$ <br>\n",
+    "$h_3(4) = 4$ <br>\n",
+    "$h_3(5) = 3$ <br>\n",
+    "\n",
+    "### MinHash Signature for each set:\n",
+    "\n",
+    "$S_1 \\{2,5\\}$ (non-zero entries in $S_1$):\n",
+    "\n",
+    "$h_1(2) = 5, h_1(5) = 5$, $Min = 5$<br>\n",
+    "$h_2(2) = 2, h_2(5) = 5$, $Min = 2$<br>\n",
+    "$h_3(2) = 0, h_3(5) = 3$, $Min = 0$<br>\n",
+    "\n",
+    "The same for sets $S_2,S_3,S_4$, the signature table looks like:\n",
+    "\n",
+    "| Set  | $h_1 Min$ | $h_2 Min$ | $h_3 Min$|\n",
+    "|------|-----------|-----------|----------|\n",
+    "| $S_1$| 5         | 2         | 0        |\n",
+    "| $S_2$| 1         | 2         | 1        |\n",
+    "| $S_3$| 1         | 2         | 4        |\n",
+    "| $S_4$| 1         | 2         | 0        |\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "### b)\n",
-    "MurmurHash was never designed to be cryptographically secure thus it just lacks the necessary mathematical complexity to prevent collision attacks. As mentioned above, its main applications are hash tables and Bloom filters, which prioritize speed and a uniform distribition over collision resistance."
+    "$h_3(x)$ is a true permutation because all hash values $\\{0,1,2,3,4,5\\}$ are distinct.\n",
+    "\n",
+    "Collisions:\n",
+    "\n",
+    "$h_1(x)$: <br>\n",
+    "$h_1(0) = h_1(3) = 1$ <br>\n",
+    "$h_1(1) = h_1(4) = 3$ <br>\n",
+    "$h_1(2) = h_1(5) = 5$ <br>\n",
+    "\n",
+    "$h_2(x)$: <br>\n",
+    "$h_2(0) = h_2(2) = h_2(4) = 2$ <br>\n",
+    "$h_2(1) = h_2(3) = h_2(5)= 3$ <br>\n",
+    "\n",
+    "\n",
+    "### c)\n",
+    "| Pair        | MinHash Similarity | Jaccard Similarity |\n",
+    "|-------------|--------------------|--------------------|\n",
+    "| $S_1$,$S_2$ | 0.33               | 0                  |\n",
+    "| $S_1$,$S_3$ | 0.33               | 0                  |\n",
+    "| $S_1$,$S_4$ | 0.67               | 0.33               |\n",
+    "| $S_2$,$S_3$ | 0.33               | 0                  |\n",
+    "| $S_2$,$S_4$ | 0.67               | 0.33               |\n",
+    "| $S_3$,$S_4$ | 0.33               | 0.33               |\n",
+    "\n",
+    "Due to the small number of hash functions we cannot see that the MinHash similarity would actually converge to the true Jaccard similarity."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 3"
+    "# Exercise 2"
    ]
   },
   {
