--- a/exercise6/exercise6.ipynb
+++ b/exercise6/exercise6.ipynb
@@ -241,209 +241,131 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1234, 2345, 3456, 4567]\n"
+     ]
+    }
+   ],
    "source": [
-    "Given our stream of numbers:\n",
+    "def compute_k_shingles(digits, k):\n",
+    "    # Set to store unique positions\n",
+    "    positions = set()\n",
     "\n",
-    "$\\{3, 4, 1, 3, 4, 2, 1, 2\\}$\n",
+    "    # Iterate over the digits\n",
+    "    for i in range(len(digits) - k + 1):\n",
+    "        # Get k-shingle at current position\n",
+    "        shingle = digits[i:i+k]\n",
+    "        # Convert to integer and add to set\n",
+    "        positions.add(int(shingle))\n",
     "\n",
-    "First we define our variables $X_i.el$\n",
+    "    # Return ordered list of unique positions\n",
+    "    return sorted(positions)\n",
     "\n",
-    "$X_i.el = [3, 4, 1, 3, 4, 2, 1, 2]$ for $i > 0$ \n",
-    "\n",
-    "The Alon-Matias-Szegedy algorithm computes the $k$-th moment by using the frequency of each unique element in the stream. The variable $X_i.val$ is updated at each position to capture how the stream contributes to the computation of the moment.\n",
-    "\n",
-    "So we:\n",
-    "1. Track the frequency of each element $x$ in the stream so far\n",
-    "2. Calculate $X_i.val = f(x)^k$ for the element $x$ at position $i$\n",
-    "\n",
-    "For this exercise we take $k = 2$, which is the sum of squared frequencies of the elements.\n",
-    "\n",
-    "| Position $i$ | $X_i.el$ | Frequency of $X_i.el$ | $X_i.val = f(X_i.el)^2$|\n",
-    "|--------------|----------|-----------------------|------------------------|\n",
-    "| 1            | 3        | $f(3) = 1$            | $1^2 = 1$              |\n",
-    "| 2            | 4        | $f(4) = 1$            | $1^2 = 1$              |\n",
-    "| 3            | 1        | $f(1) = 1$            | $1^2 = 1$              |\n",
-    "| 4            | 3        | $f(3) = 2$            | $2^2 = 4$              |\n",
-    "| 5            | 4        | $f(4) = 2$            | $2^2 = 4$              |\n",
-    "| 6            | 2        | $f(2) = 1$            | $1^2 = 1$              |\n",
-    "| 7            | 1        | $f(1) = 2$            | $2^2 = 4$              |\n",
-    "| 8            | 2        | $f(2) = 2$            | $2^2 = 4$              |\n",
-    "\n",
-    "### Does it make sense to have a separate variable for each stream position?\n",
-    "\n",
-    "In practice, the stream is potentially infinite and allocating memory for each position is impossible. Furthermore, many variables would store redundant information, as the streams often depend on statistics (e.g. frequency count in this example).\n",
-    "\n",
-    "Instead of storing $X_i.el$ and $X_i.val$ for each position, it would make much more sense to use a frequency dictionary, which tracks the frequency of each unique element in the stream and then use this dictionary to dynamically calculate $X_i.val$ when needed."
+    "# Test function with example\n",
+    "test_example = \"1234567\"\n",
+    "k = 4\n",
+    "shingles = compute_k_shingles(test_example, k)\n",
+    "print(shingles)  # Expected: [1234, 2345, 3456, 4567]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 5"
+    "### b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mpmath import mp\n",
+    "\n",
+    "# Set precision to 10000 digits\n",
+    "mp.dps = 10000\n",
+    "\n",
+    "# Get pi as string after decimal point\n",
+    "pi_digits = str(mp.pi)[2:]\n",
+    "\n",
+    "# Apply shingles function with k = 12\n",
+    "k = 12\n",
+    "shingles_positions = compute_k_shingles(pi_digits, k)\n",
+    "\n",
+    "# Save output to text file\n",
+    "with open(\"k_shingles_pi.txt\", \"w\") as f:\n",
+    "    for pos in shingles_positions:\n",
+    "        f.write(f\"{pos}\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### a)\n",
-    "The probability formula for a random element hashing to a specific bit in the Bloom filter is: $P(hit) = \\frac{1}{n}$\n",
-    "\n",
-    "Where $n = 5$ (number of bits in the array). Thus, the probability that a random element gets hashed to a given bit is: $P(hit) = \\frac{1}{5} = 20\\%$.\n",
-    "\n",
-    "This probability arises because each bit in the bit array is equally likely to be chosen by the hash function of a random element, assuming the hash function distributes values uniformly."
+    "### c)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MinHash Signature: [11610003501, 54862297882, 26611768318, 3324423771, 36766341956]\n"
+     ]
+    }
+   ],
    "source": [
-    "### b)\n",
-    "$h_1(x) = x\\ mod\\ 5$<br>\n",
-    "$h_2(x) = (2x + 3)\\ mod\\ 5$\n",
+    "import random\n",
+    "\n",
+    "def minhash_signature(positions, hash_functions):\n",
+    "    # Initialize signature\n",
+    "    signature = []\n",
+    "\n",
+    "    # Iterate over hash functions\n",
+    "    for a, b, p in hash_functions:\n",
+    "        min_hash = float(\"inf\")\n",
+    "        # Compute hash value for each position and track the minimum\n",
+    "        for pos in positions:\n",
+    "            hash_value = ((a * pos + b) % p) % (10**15)\n",
+    "            min_hash = min(min_hash, hash_value)\n",
+    "        signature.append(min_hash)\n",
+    "    return signature\n",
+    "\n",
+    "def generate_hash_functions():\n",
+    "    hash_functions = []\n",
+    "    # First hash function\n",
+    "    hash_functions.append((37, 126, 10**15 + 223))\n",
+    "    \n",
+    "    # Generate 4 additional hash functions\n",
+    "    for i in [37, 91, 159, 187]:\n",
+    "        a = random.randint(0, 10**12)\n",
+    "        b = random.randint(0, 10**12)\n",
+    "        p = 10**15 + i\n",
+    "        hash_functions.append((a, b, p))\n",
+    "    \n",
+    "    return hash_functions\n",
     "\n",
     "\n",
-    "For $x = 4$:\n",
+    "# Generate hash functions\n",
+    "hash_functions = generate_hash_functions()\n",
     "\n",
+    "# Compute MinHash signature\n",
+    "signature = minhash_signature(shingles_positions, hash_functions)\n",
     "\n",
-    "$h_1(4) = 4\\ mod\\ 5 = 4$<br>\n",
-    "$h_2(4) = 11\\ mod\\ 5 = 1$<br>\n",
-    "\n",
-    "|  0   |  1   |  2   |  3   |  4   |\n",
-    "|-----|-----|-----|-----|-----|\n",
-    "| 0 | 1 | 0 | 0 | 1 |\n",
-    "\n",
-    "\n",
-    "For $x = 1$:\n",
-    "\n",
-    "\n",
-    "$h_1(4) = 1\\ mod\\ 5 = 1$<br>\n",
-    "$h_2(4) = 5\\ mod\\ 5 = 0$<br>\n",
-    "\n",
-    "|  0   |  1   |  2   |  3   |  4   |\n",
-    "|-----|-----|-----|-----|-----|\n",
-    "| 1 | 1 | 0 | 0 | 1 |\n",
-    "\n",
-    "Every bit is equally likely to be hit by the two hash functions if the input values are uniformly distributed.\n",
-    "- $h_1(x)$ simply maps $x$ to its remainder when divided by 5. Since it cylcles through all possible values as $x$ increases, it uniformly distributes across the 5 bits if $x$ itself is uniformly distributed.\n",
-    "- $h_2(x)$ also distributes the values uniformly since the GCD of 2 and 5 is 1 (2 is relatively prime to 5 since they're both prime numbers). This property ensures that the mapping $2x\\ mod\\ 5$ generates a complete cycle over all residues before repeating. Adding 3 doesn't change the uniformity but merely shifts the sequence cyclically.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### c)\n",
-    "$P_{false\\ positive} = (1 - e^{-\\frac{k*n}{m}})^k$\n",
-    "\n",
-    "Where:\n",
-    "- $k = 2$ (number of hash functions)\n",
-    "- $n = 2$ (number of elements inserted)\n",
-    "- $m = 5$ (size of the bit array)\n",
-    "\n",
-    "The fraction of 1s in the bit array is determined by $1 - e^{-\\frac{k*n}{m}} = 0,551$. Thus, approximaltey $55,1\\%$ of the bits are expected to be set, resulting in a $P_{false\\ positive} = (0,551)^2 = 0,304$.\n",
-    "\n",
-    "The false positive probability is approximatley $30,4\\%$. This means that for any random number checked against the Bloom filter, there is about a $30,4\\%$ chance it will falsely appear to be in the set."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise 6"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise 7"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For a Bloom filter, the false positive probability $b$ is given by:\n",
-    "\n",
-    "$b = (1 - e^{-\\frac{k*m}{n}})^k$\n",
-    "\n",
-    "We now want to find $k$ such that it minimizes $b$, which means we minimize $b$ with respect to $k$.\n",
-    "\n",
-    "\n",
-    "To do that, we first, take the natural logarithm\n",
-    "\n",
-    "$\\ln(b) = k * \\ln(1 - e^{-\\frac{k*m}{n}})$\n",
-    "\n",
-    "Now we differentiate $\\ln(b)$ with respect to $k$\n",
-    "\n",
-    "<br />\n",
-    "\n",
-    "$\\frac{d}{dk}\\ln(b) = \\ln(1 - e^{-\\frac{k*m}{n}}) + k * \\frac{1}{1 - e^{-\\frac{k*m}{n}}} * (-\\frac{m}{n} * e^{-\\frac{k*m}{n}})$\n",
-    "\n",
-    "<br />\n",
-    "\n",
-    "By setting this derivative to 0 and solving numerically/anatically, the optimal $k$ becomes:\n",
-    "\n",
-    "$k = \\frac{n}{m} * ln(2)$\n",
-    "\n",
-    "This $k$ minimizes collisions while maximizing the effective use of bits."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise 8"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The data has the schema:\n",
-    "\n",
-    "$Grades(university, courseID, studentID, grade)$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### a) For each university, the average number of students in a course\n",
-    "\n",
-    "Key attributes = `university`, `courseID`\n",
-    "\n",
-    "The number of students in a course depends on the courses within each university, therefore we need to sample __universities__ and __courseID__ to ensure that all courses and students within a university are included in the sample.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### b) Fraction of students, who have an average grade of 2.0 or better\n",
-    "\n",
-    "Key attributes = `university`, `studentID`\n",
-    "\n",
-    "We need to sample the students across all universities to approximate their average grade. By sampling on __studentID__ and __university__, we get a uniform sample of the students where each student is uniquely identified within the sample."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### c) Fraction of courses where at least half of the students got the grade 1.7 or better\n",
-    "Key attributes = `university`, `courseID`\n",
-    "\n",
-    "The sampling must preserve the student to course mapping. By sampling on `courseID`, we ensure all students in a course are included in the sample."
+    "# Output the MinHash signature\n",
+    "print(\"MinHash Signature:\", signature)\n"
    ]
   }
  ],
