Nearly finished task 2, just needs to be executed

--- a/exercise6/exercise6.ipynb
+++ b/exercise6/exercise6.ipynb
@@ -50,6 +50,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import udf, col, lit, input_file_name, concat_ws, collect_list, size, array_distinct\n",
+    "from pyspark.sql.types import ArrayType, StringType\n",
+    "\n",
+    "# Initialize Spark Session\n",
+    "spark = SparkSession.builder.appName(\"CharacterShingling\").getOrCreate()\n",
+    "folder_path = \"/content/sample_text\"\n",
+    "\n",
+    "# Load all text files from folder into a DataFrame\n",
+    "documents = spark.read.text(folder_path).withColumnRenamed(\"value\", \"text\")\n",
+    "\n",
+    "# Add column for file name\n",
+    "documents = documents.withColumn(\"file_name\", input_file_name())\n",
+    "\n",
+    "# Group documents by file name and concatenate to single block of text\n",
+    "documents_grouped = documents.groupBy(\"file_name\").agg(\n",
+    "    concat_ws(\" \", collect_list(\"text\")).alias(\"full_text\")\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Function to generate shingles of size k from a text\n",
+    "def generate_shingles(text, k):\n",
+    "    shingles = set()\n",
+    "\n",
+    "    # Handle line breaks, hyphens and remove extra spaces\n",
+    "    text = text.replace(\"\\n\", \" \").replace(\"- \", \"\").replace(\"\\r\", \" \")\n",
+    "    text = \" \".join(text.split())\n",
+    "\n",
+    "    # Generate shingles\n",
+    "    for i in range(len(text) - k + 1):\n",
+    "        shingle = text[i:i + k]\n",
+    "        shingles.add(shingle)\n",
+    "\n",
+    "    return list(shingles)\n",
+    "\n",
+    "\n",
+    "# Register the function as a UDF\n",
+    "shingles_udf = udf(lambda text, k: generate_shingles(text, k), ArrayType(StringType()))\n",
+    "\n",
+    "# Generate shingles for k = 5 and k = 9\n",
+    "results = {}\n",
+    "for k in [5, 9]:\n",
+    "    # Add column for shingles of size k\n",
+    "    shingles_df = documents_grouped.withColumn(f\"shingles_{k}\", shingles_udf(col(\"full_text\"), lit(k)))\n",
+    "\n",
+    "    # Add column for the number of distinct shingles\n",
+    "    shingles_count_df = shingles_df.withColumn(f\"distinct_shingles_{k}\", size(array_distinct(col(f\"shingles_{k}\"))))\n",
+    "\n",
+    "    # Add results to the dictionary\n",
+    "    results[k] = shingles_count_df.select(\"file_name\", f\"distinct_shingles_{k}\")\n",
+    "\n",
+    "    # Filter results for the Grundgesetz\n",
+    "    grundgesetz_results = results[k].filter(col(\"file_name\").contains(\"grundgesetz\"))\n",
+    "\n",
+    "    # Display results\n",
+    "    print(f\"\\nResults for k={k}:\")\n",
+    "    results[k].show(truncate=False)\n",
+    "\n",
+    "    print(f\"\\nGrundgesetz results for k={k}:\")\n",
+    "    grundgesetz_results.show(truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercise 3"
    ]
   },
@@ -145,104 +220,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             Hash Function                        Hashed Values  \\\n",
-      "0  h1(x) = (2x + 1) mod 32      [7, 3, 9, 3, 11, 19, 5, 13, 11]   \n",
-      "1  h2(x) = (3x + 7) mod 32  [16, 10, 19, 10, 22, 2, 13, 25, 22]   \n",
-      "2      h3(x) = (4x) mod 32     [12, 4, 16, 4, 20, 4, 8, 24, 20]   \n",
-      "\n",
-      "                              Binary Representations  \\\n",
-      "0  [00111, 00011, 01001, 00011, 01011, 10011, 001...   \n",
-      "1  [10000, 01010, 10011, 01010, 10110, 00010, 011...   \n",
-      "2  [01100, 00100, 10000, 00100, 10100, 00100, 010...   \n",
-      "\n",
-      "                  Tail Lengths  Max Tail Length  Estimate (Distinct Elements)  \n",
-      "0  [0, 0, 0, 0, 0, 0, 0, 0, 0]                0                             1  \n",
-      "1  [4, 1, 0, 1, 1, 1, 0, 0, 1]                4                            16  \n",
-      "2  [2, 2, 4, 2, 2, 2, 3, 3, 2]                4                            16  \n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "# Stream of integers\n",
-    "stream = [3, 1, 4, 1, 5, 9, 2, 6, 5]\n",
-    "\n",
-    "# Hash functions\n",
-    "def h1(x):\n",
-    "    return (2 * x + 1) % 32\n",
-    "\n",
-    "def h2(x):\n",
-    "    return (3 * x + 7) % 32\n",
-    "\n",
-    "def h3(x):\n",
-    "    return (4 * x) % 32\n",
-    "\n",
-    "# Function to count trailing zeros in binary\n",
-    "def count_trailing_zeros(num):\n",
-    "    binary = f\"{num:05b}\"  # Convert to 5-bit binary\n",
-    "    return len(binary) - len(binary.rstrip('0'))  # Count trailing zeros\n",
-    "\n",
-    "# Process each hash function\n",
-    "results = []\n",
-    "hash_functions = [\n",
-    "    (h1, \"h1(x) = (2x + 1) mod 32\"),\n",
-    "    (h2, \"h2(x) = (3x + 7) mod 32\"),\n",
-    "    (h3, \"h3(x) = (4x) mod 32\"),\n",
-    "]\n",
-    "\n",
-    "# Iterate through hash functions\n",
-    "for h_func, description in hash_functions:\n",
-    "    hashed_values = [h_func(x) for x in stream]\n",
-    "    tail_lengths = [count_trailing_zeros(h_func(x)) for x in stream]\n",
-    "    max_tail_length = max(tail_lengths)\n",
-    "    estimate = 2 ** max_tail_length\n",
-    "    results.append({\n",
-    "        \"Hash Function\": description,\n",
-    "        \"Hashed Values\": hashed_values,\n",
-    "        \"Binary Representations\": [f\"{x:05b}\" for x in hashed_values],\n",
-    "        \"Tail Lengths\": tail_lengths,\n",
-    "        \"Max Tail Length\": max_tail_length,\n",
-    "        \"Estimate (Distinct Elements)\": estimate,\n",
-    "    })\n",
-    "\n",
-    "# Display results\n",
-    "df_results = pd.DataFrame(results)\n",
-    "print(df_results)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Bonus\n",
-    "\n",
-    "The choice of hash functions might lead to poor distributions of hash values. For example $h_3(x) = (4x)\\mod 32$ will always produce values that are multiples of 4, which significantly reduces randomness and results in fewer unique hash values. This can lead to clustering and many collisions.\n",
-    "\n",
-    "An advice would be to avoid simple linear functions like $ax+b\\mod 2^k$ unless $a$ and $b$ are carefully chosen to avoid patterns. One could also consider using more advanced hash functions like MurmurHash because these tend to have way better randomness."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Exercise 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MinHash Signature: [11610003501, 54862297882, 26611768318, 3324423771, 36766341956]\n"
+      "MinHash Signature: [11610003501, 63680740533, 107687383220, 41635782020, 203614208147]\n"
      ]
     }
    ],
