Finished exercise 2, still needs to be run once

--- a/exercise6/exercise6.ipynb
+++ b/exercise6/exercise6.ipynb
@@ -65,10 +65,10 @@
     "\n",
     "# Initialize Spark Session\n",
     "spark = SparkSession.builder.appName(\"CharacterShingling\").getOrCreate()\n",
-    "folder_path = \"/content/sample_text\"\n",
+    "path = \"/grundgesetz/brd_grundgesetz_63_2019-04-03.txt\"\n",
     "\n",
     "# Load all text files from folder into a DataFrame\n",
-    "documents = spark.read.text(folder_path).withColumnRenamed(\"value\", \"text\")\n",
+    "documents = spark.read.text(path).withColumnRenamed(\"value\", \"text\")\n",
     "\n",
     "# Add column for file name\n",
     "documents = documents.withColumn(\"file_name\", input_file_name())\n",
